Fixed appearance on IE

--- a/src/gr/grnet/pithos/web/client/PithosCellTable.css
+++ b/src/gr/grnet/pithos/web/client/PithosCellTable.css
@@ -25,7 +25,7 @@
 	background-color: #74aec9;
 	height: 25px;
 	text-shadow: none;
-	font-size: small;
+	font-size: 13px;
 	font-weight: normal;
 }
 
